Fixed minor spacing bug below input-group

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -103,7 +103,7 @@ a:link, a:hover, a:active, a:visited { text-decoration: none }
 }
 
 #login-header, #register-header {
-    padding: 10px;
+    padding: 4px;
     font-size: 24px;
     text-align: center;
 }
@@ -142,7 +142,9 @@ a:link, a:hover, a:active, a:visited { text-decoration: none }
     align-items: center;
 }
 
-.input-group { margin-bottom: 0; }
+.input-group {
+    margin-bottom: 3px;
+}
 
 
 /* ----- SCALE SLIDER ----- */
